<resources>
    <string name="app_name">FitForma</string>
    <string name="welcome">Welcome</string>
    <string name="signup_ad">Create Account Here!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="confpassword">Confirm Password</string>
    <string name="registerad">Already have an account ? Login here !</string>
    <string name="country">Country</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="err_username">username cannot be empty!</string>
    <string name="err_pass">password cannot be empty!</string>
    <string name="slider_greet">Hello,\nPlease fill in your body composition</string>
    <string name="description">item description</string>
    <string name="food_weight">weight</string>
    <string name="food_kal">calory</string>
    <string name="food_karbo">carbo</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="editProfile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="searchbar_hint">Search Food or Scan</string>
    <string name="age">Age</string>
    <string name="weight">Body Weight (kg)</string>
    <string name="height">Body Height (cm)</string>
    <string name="searchad">Get to know your food!</string>
    <string name="scan">Scan</string>
    <string name="main_greet">Hello,</string>
    <string name="bmi">BMI</string>
    <string name="bmr">BMR</string>
    <string name="saran">Activity Advice</string>
    <string name="saran_desc">deskripsi saran</string>
    <string name="gender">Gender</string>
    <string name="weight_2">Weight</string>
    <string name="height_2">Height</string>
    <string name="tv_age">age view</string>
    <string name="details">Details</string>
    <string name="tv_gender">gender view</string>
    <string name="tv_weight">weight view</string>
    <string name="tv_height">height view</string>
    <string name="gender_hint">male / female</string>
    <string name="gallery">Gallery</string>
    <string name="bmi_category">"Your BMI Category : "</string>
    <string name="tv_category">bmi cat</string>
    <string name="goals">Goals</string>
    <string name="reduce">Reduce</string>
    <string name="maintain">Maintain</string>
    <string name="Gain">Gain</string>
    <string name="reduce_desc">reduce description</string>
    <string name="maintain_desc">maintain description</string>
    <string name="gain_desc">gain description</string>
    <string name="next">Next</string>
    <string name="bmi_afterReg">"From your weight and height calculation,\nYour BMI Category is "</string>
    <string name="advice">"Based on your BMI,"</string>
    <string name="goodluck">Good Luck!</string>
    <string name="carbo">Carbo</string>
    <string name="calory">Calory</string>
    <string name="porsi">Porsi</string>

</resources>