<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/main_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_greet"
        android:textColor="@color/black"
        android:textSize="20sp"/>

<!--    person image changing dynamicly on activity-->
    <ImageView
        android:id="@+id/tv_person"
        android:layout_width="190dp"
        android:layout_height="278dp"
        android:layout_below="@id/tv_name"
        android:layout_marginStart="20dp"
        android:src="@drawable/person_normal_black" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_greeting"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/tv_bmi"
        android:layout_width="120dp"
        android:layout_height="115dp"
        android:layout_below="@id/tv_name"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/tv_person"
        android:text="@string/bmi"
        android:textSize="25sp"
        android:padding="10dp"
        android:background="@drawable/shadow_rec"
        android:elevation="10dp"/>

    <TextView
        android:id="@+id/tv_bmr"
        android:layout_width="120dp"
        android:layout_height="115dp"
        android:layout_below="@id/tv_bmi"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/tv_person"
        android:text="@string/bmr"
        android:textSize="25sp"
        android:padding="10dp"
        android:background="@drawable/shadow_rec"
        android:elevation="10dp"/>

    <TextView
        android:id="@+id/tv_saran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_person"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/bmi_category"/>

    <TextView
        android:id="@+id/tv_bmi_category"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_person"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/tv_saran"
        android:text="@string/tv_category"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/goals_textView"
        android:layout_width="89dp"
        android:layout_height="37dp"
        android:layout_below="@id/tv_saran"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/goals"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/reduce_textView"
        android:layout_width="89dp"
        android:layout_height="25dp"
        android:layout_below="@id/goals_textView"
        android:layout_marginStart="20dp"
        android:text="@string/reduce"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/maintain_textView"
        android:layout_width="89dp"
        android:layout_height="25dp"
        android:layout_below="@id/tv_reduce"
        android:layout_marginStart="20dp"
        android:text="@string/maintain"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/gain_textView"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_below="@id/tv_maintain"
        android:layout_marginStart="20dp"
        android:text="@string/Gain"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_reduce"
        android:layout_width="360dp"
        android:layout_height="70dp"
        android:layout_below="@id/reduce_textView"
        android:layout_marginStart="20dp"
        android:text="@string/reduce_desc"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_maintain"
        android:layout_width="360dp"
        android:layout_height="70dp"
        android:layout_below="@id/maintain_textView"
        android:layout_marginStart="20dp"
        android:text="@string/maintain_desc"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_gain"
        android:layout_width="360dp"
        android:layout_height="70dp"
        android:layout_below="@id/gain_textView"
        android:layout_marginStart="20dp"
        android:text="@string/gain_desc"
        android:textSize="15sp" />


</RelativeLayout>