<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/search_img"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/scan"/>

    <TextView
        android:id="@+id/search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_img"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:text="@string/searchad"/>

    <Button
        android:id="@+id/search_scan"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/search_gallery"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/scan" />

    <Button
        android:id="@+id/search_gallery"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_text"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/gallery" />

    <Button
        android:id="@+id/search_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_gallery"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/red"
        android:text="@string/search" />


<!--bawah ini cuman buat ngetes scannernya. dihapus aja kalo udh bisa di detail activity-->
    <TextView
        android:id="@+id/prediction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_start"
        android:text="@string/app_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"/>

</RelativeLayout>